--- a/miscss/estilos.css
+++ b/miscss/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: white;
+    background-color: gray;
     text-align: justify;
 }
 #div1
@@ -11,7 +11,7 @@ body
     border-width: thin;
     border: 0px solid;
     background-color: rgb(255, 255, 255);
-    background-image: linear-gradient( #55c1ec, white);
+    background-image: linear-gradient(white);
 }
 
 #div2
@@ -22,7 +22,7 @@ body
     border-style: solid;
     border-width: thin;
     border: 1px solid #cccccc;
-    background-color: #55c1ec;
+    background-color: #ec5582;
     text-align: center;
 }
 
